# ssdetect

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yaml  claude-code-review.yaml  claude-code-review.yml  claude.yaml  claude.yml  devskim.yaml
.trunk/: trunk.yaml
src/ssdetect/: __init__.py  __main__.py  classifier.py  cli.py  utils.py
tests/: conftest.py  test_classifier.py  test_utils.py
