[project]
name = "ssdetect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dave Williams", email = "dave@dave.io" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "easyocr>=1.7.2",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "rich>=14.1.0",
    "scipy>=1.16.0",
    "screenshot-detector",
    "structlog>=25.4.0",
]

[project.scripts]
ssdetect = "ssdetect:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
screenshot-detector = { git = "https://github.com/dukn/screenshot_detector.git" }
